[package]
name = "mufiz-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0.196", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Enables link time optimizations to optimize at link-stage
codegen-units = 1 # allows for maximum size reduction optimizations
panic = "abort" # reduces size of panic unwind backtrace